[package]
name = "test-tech"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.1", features = ["full"] }
serde_json = "1.0"
actix-web = "4"